// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-core styled basic 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"eddbda30\\",
  label: \\"SomeComponent\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/babel-plugin-core styled call-expression 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled('div')\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled('div', {
  target: \\"e1wwfyhh0\\",
  label: \\"SomeComponent\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/babel-plugin-core styled label 1`] = `
"import styled from '@emotion/styled'

class Thing {
  static SomeComponent = styled.div\`
    color: hotpink;
  \`
  BadIdeaComponent = styled.div\`
    background: hotpink;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

class Thing {
  static SomeComponent = _styled(\\"div\\", {
    target: \\"erkd9g00\\",
    label: \\"SomeComponent\\"
  })({
    name: \\"1lrxbo5\\",
    styles: \\"color:hotpink;\\"
  });
  BadIdeaComponent = _styled(\\"div\\", {
    target: \\"erkd9g01\\",
    label: \\"BadIdeaComponent\\"
  })({
    name: \\"d1m7sn\\",
    styles: \\"background:hotpink;\\"
  });
}"
`;

exports[`@emotion/babel-plugin-core styled multiple-calls 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled.div\`
  color: hotpink;
\`

const SomeOtherComponent = styled.button\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"e15zzbw00\\",
  label: \\"SomeComponent\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});

const SomeOtherComponent = _styled(\\"button\\", {
  target: \\"e15zzbw01\\",
  label: \\"SomeOtherComponent\\"
})({
  name: \\"bjcoli\\",
  styles: \\"color:green;\\"
});"
`;

exports[`@emotion/babel-plugin-core styled object 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled.div({ color: 'hotpink' })


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"es0jczh0\\",
  label: \\"SomeComponent\\"
})({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;
